# Magic-Item-Database

./: .gitignore  Common Items.sql  Griffons Saddlebag Items.csv  Legendary Items.sql  Magic Items.db  README.md  Rare Items.sql  Very Rare Items.sql  requirements.txt
Diagrams/: SystemDiagramV1.txt  SystemDiagramV2.txt
LiamIndex/: .env.example  README.md  pyproject.toml
LiamIndex/src/liamindex/: __init__.py  db.py  importer.py  models.py  print_reddit_payload.py  scraper.py
OriginalWork/: Common Items.sql  Griffons Saddlebag Items.xlsx  Legendary Items.sql  Magic Items.sqbpro  Rare Items.sql  Very Rare Items.sql
TowneCodex/: .env.example  README.md  pyproject.toml
TowneCodex/src/data/: Griffons_Saddlebag_Items.csv  Real_Test_Data.csv  Real_Test_Data2.csv
TowneCodex/src/renderers/: html.py
TowneCodex/src/townecodex/: __init__.py  admin_ops.py  db.py  dto.py  importer.py  logging.py  models.py  pricing.py  query.py  repos.py  scraper.py  utils.py
TowneCodex/src/townecodex/generation/: generator_engine.py  schema.py
TowneCodex/src/townecodex/parsers/: base.py  csv_parser.py
TowneCodex/src/townecodex/proof_of_concept/: print_dndbeyond_items.py  print_reddit_payload.py
TowneCodex/src/townecodex/renderers/: __init__.py  base.py  html.py  txt.py
TowneCodex/src/townecodex/ui/: backend.py  cli.py  gui.py  styles.py  workers.py
TowneCodex/tests/: test_cli.py  test_csv_parser.py  test_db.py  test_importer_integration.py  test_models.py  test_parse_attunement_importer.py  test_parsers_base.py  test_query.py  test_reddit_scraper.py  test_repos.py
(+2 files in other folders)
